--- a/PROJECTannualcarbonlinechart.json
+++ b/PROJECTannualcarbonlinechart.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-  "description": "This chart shows the change in the main components of electricity in the UK. Data was downloaded from https://ourworldindata.org/electricity-mix.",
+  "description":
   "title": {
     "text": "Global Carbon Emissions",
-    "subtitle": "Total carbon emissions from 1750-2021 by entity, Source: ourworldindata.org",
+    "subtitle": "Total carbon emissions from 1750-2021 by entity, from fossil fuels and industry. Source: ourworldindata.org",
     "subtitleFontStyle": "italic",
     "subtitleFontSize": 10,
     "anchor": "start",
