--- a/PROJECTannualcarbonlinechart.json
+++ b/PROJECTannualcarbonlinechart.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-  "description":
-  "title": {
+  "description":"blah blah blah",
+   "title": {
     "text": "Global Carbon Emissions",
     "subtitle": "Total carbon emissions from 1750-2021 by entity, from fossil fuels and industry. Source: ourworldindata.org",
     "subtitleFontStyle": "italic",
